More rules for `PreferSpecificApiCheck` and improved test coverage